[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Jocer Franquiz", email = "work.jocerfranquiz@gmail.com"},
]
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "yfinance",
    "sqlalchemy"
]
requires-python = ">=3.8"
license = {text = "CC-BY-NC-4.0"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
[tool.pdm.scripts]
serverup = "uvicorn main:app --reload"


[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
